cabal-version:       2.2
name:                hs-rqlite
version:             0.1.0.0
synopsis:            A Haskell client for RQlite
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Konstantinos Dermentzis <k.dermenz@gmail.com>
maintainer:          Konstantinos Dermentzis <k.dermenz@gmail.com>
copyright:           Konstantinos Dermentzis <k.dermenz@gmail.com>
category:            Database
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Rqlite
                     , Rqlite.Status
  build-depends:       base ^>=4.12.0.0
                     , aeson
                     , bifunctors
                     , bytestring
                     , containers
                     , HTTP
                     , scientific
                     , text
                     , unordered-containers
  ghc-options:         -Wall
  default-language:    Haskell2010
