cabal-version:       2.2
name:                hs-rqlite
version:             0.1.0.0
synopsis:            A Haskell client for RQlite
description:         See README at <https://github.com/kderme/hs-rqlite/blob/master/README.md>
bug-reports:         https://github.com/kderme/hs-rqlite/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Konstantinos Dermentzis <k.dermenz@gmail.com>
maintainer:          Konstantinos Dermentzis <k.dermenz@gmail.com>
copyright:           Konstantinos Dermentzis <k.dermenz@gmail.com>
category:            Database
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Rqlite
                     , Rqlite.Status
  build-depends:       base ^>=4.12.0.0
                     , aeson
                     , bifunctors
                     , bytestring
                     , containers
                     , HTTP
                     , scientific
                     , text
                     , unordered-containers
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kderme/hs-rqlite
